--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1,3 +1,14 @@
+@article{leys2013detecting,
+  title={Detecting outliers: Do not use standard deviation around the mean, use absolute deviation around the median},
+  author={Leys, Christophe and Ley, Christophe and Klein, Olivier and Bernard, Philippe and Licata, Laurent},
+  journal={Journal of experimental social psychology},
+  volume={49},
+  number={4},
+  pages={764--766},
+  year={2013},
+  publisher={Elsevier}
+}
+
 @inproceedings{10.1145/2568088.2568097,
 	title        = {On the Limits of Modeling Generational Garbage Collector Performance},
 	author       = {Libi\v{c}, Peter and Bulej, Lubom\'{\i}r and Horky, Vojt\v{e}ch and T\r{u}ma, Petr},
