--- a/thesis.tex
+++ b/thesis.tex
@@ -30,6 +30,11 @@
 \usepackage{listing}
 \usepackage{algorithm,algpseudocode}
 \usepackage[abspath]{currfile}
+\usepackage{multirow}
+% \usepackage{booktabs}
+% \usepackage{hyperref} 
+% \usepackage[table]{xcolor}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%% extra commands %%%%%%%%%%%%%%%%%% 
 %%%%%%%%highlighting 
