--- a/thesis.tex
+++ b/thesis.tex
@@ -2,10 +2,11 @@
 % Please have a look at the README.md file for info on how to use the template
 
 \documentclass[a4paper,12pt,times,numbered,print,index,doublelinesep]{PhDThesisPSnPDF}
-
+% for the correlation table 
+\usepackage[table]{xcolor}
+\usepackage{pgfplotstable}
 
 \usepackage{import}
-
 \usepackage{paralist}
 \usepackage[english]{babel}
 \usepackage{cleveref}
