add : correlation table

--- a/thesis.tex
+++ b/thesis.tex
@@ -32,6 +32,7 @@
 \usepackage{algorithm,algpseudocode}
 \usepackage[abspath]{currfile}
 \usepackage{multirow}
+\usepackage{tikz}
 % \usepackage{booktabs}
 % \usepackage{hyperref} 
 % \usepackage[table]{xcolor}
