update : expermental part

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1314,13 +1314,12 @@
 	file         = {/home/jffk0586/Zotero/storage/4CEWSS2C/Lafond and Lilius - 2006 - An Energy Consumption Model for an Embedded Java V.pdf},
 	language     = {en}
 }
- @misc{ wiki:g5000,
-   author = "Grid5000",
-   title = "Status --- Grid5000{,} ",
-   year = "2021",
-   url = "https://www.grid5000.fr/mediawiki/index.php?title=Status&oldid=92306",
-   note = "[Online; accessed 17-September-2022]"
- }
+
+@misc{cappello2010grid5000,
+  title={Grid5000},
+  author={Cappello, Franck and Desprez, F and Margery, D},
+  year={2010}
+}
 
 @inproceedings{rubinsteyn2012parakeet,
   title={Parakeet: A $\{$Just-In-Time$\}$ Parallel Accelerator for Python},
