--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1,3 +1,122 @@
+
+@article{naresh2020education,
+  title={Education after COVID-19 crisis based on ICT tools},
+  author={Naresh, Ramavath},
+  journal={Purakala},
+  volume={31},
+  number={1},
+  pages={464--468},
+  year={2020}
+}
+@article{cao2021carbon,
+  title={Carbon Neutrality in Data Center},
+  author={Cao, Zhiwei and Zhou, Xin and Hu, Han and Wang, Zhi and Wen, Yonggang},
+  journal={arXiv preprint arXiv:2110.09284},
+  year={2021}
+}
+@inproceedings{bouzel2021distributed,
+  title={Distributed Grid computing Manager covering Waste Heat Reuse Constraints},
+  author={Bouzel, R{\'e}mi and Ngoko, Yanik and Benoit, Paul and Sainth{\'e}rant, Nicolas},
+  booktitle={2021 Design, Automation \& Test in Europe Conference \& Exhibition (DATE)},
+  pages={294--299},
+  year={2021},
+  organization={IEEE}
+}
+@article{simon2018project,
+  title={Project Natick-Microsoft's Self-sufficient Underwater Datacenters},
+  author={Simon, Kevin},
+  journal={IndraStra Global},
+  volume={4},
+  number={6},
+  pages={4},
+  year={2018},
+  publisher={USA}
+}
+@article{gross1984fusion,
+  title={Fusion energy},
+  author={Gross, Robert A},
+  year={1984},
+  publisher={John Wiley and Sons, New York, NY}
+}
+@article{rong2016optimizing,
+  title={Optimizing energy consumption for data centers},
+  author={Rong, Huigui and Zhang, Haomin and Xiao, Sheng and Li, Canbing and Hu, Chunhua},
+  journal={Renewable and Sustainable Energy Reviews},
+  volume={58},
+  pages={674--691},
+  year={2016},
+  publisher={Elsevier}
+}
+@article{aroca2012towards,
+  title={Towards green data centers: A comparison of x86 and ARM architectures power efficiency},
+  author={Aroca, Rafael Vidal and Gon{\c{c}}alves, Luiz Marcos Garcia},
+  journal={Journal of Parallel and Distributed Computing},
+  volume={72},
+  number={12},
+  pages={1770--1780},
+  year={2012},
+  publisher={Elsevier}
+}
+@incollection{schneider2021world,
+  title={The World Nuclear Industry Status Report 2019},
+  author={Schneider, Mycle and Froggatt, Antony},
+  booktitle={World Scientific Encyclopedia of Climate Change: Case Studies of Climate Risk, Action, and Opportunity Volume 2},
+  pages={203--209},
+  year={2021},
+  publisher={World Scientific}
+}
+
+@article{mytton2021data,
+  title={Data centre water consumption},
+  author={Mytton, David},
+  journal={npj Clean Water},
+  volume={4},
+  number={1},
+  pages={1--6},
+  year={2021},
+  publisher={Nature Publishing Group}
+}
+
+@incollection{inshakova2022data,
+  title={Data Centers: Market Trends and Contribution to the World Economy Development During the COVID-19 Pandemic},
+  author={Inshakova, Elena I and Kachalov, Roman M},
+  booktitle={New Technology for Inclusive and Sustainable Growth},
+  pages={193--205},
+  year={2022},
+  publisher={Springer}
+}
+
+
+@article{mapstone2022cyanobacteria,
+  title={Cyanobacteria and microalgae in supporting human habitation on Mars},
+  author={Mapstone, Lydia J and Leite, Mara N and Purton, Saul and Crawford, Ian A and Dartnell, Lewis},
+  journal={Biotechnology Advances},
+  pages={107946},
+  year={2022},
+  publisher={Elsevier}
+}
+
+
+@article{portner2022climate,
+  title={Climate change 2022: Impacts, adaptation and vulnerability},
+  author={P{\"o}rtner, Hans-Otto and Roberts, Debra C and Adams, H and Adler, C and Aldunce, P and Ali, E and Begum, R Ara and Betts, R and Kerr, R Bezner and Biesbroek, R and others},
+  journal={IPCC Sixth Assessment Report},
+  year={2022},
+  publisher={IPCC Geneva, The Netherlands}
+}
+
+@article{liaw2021primary,
+  title={Primary care informatics response to Covid-19 pandemic: adaptation, progress, and lessons from four countries with high ICT development},
+  author={Liaw, Siaw-Teng and Kuziemsky, Craig and Schreiber, Richard and Jonnagaddala, Jitendra and Liyanage, Harshana and Chittalia, Aliasgar and Bahniwal, Ravninder and He, Jennifer W and Ryan, Bridget L and Lizotte, Daniel J and others},
+  journal={Yearbook of medical informatics},
+  volume={30},
+  number={01},
+  pages={044--055},
+  year={2021},
+  publisher={Georg Thieme Verlag KG}
+}
+
+
 @article{leys2013detecting,
   title={Detecting outliers: Do not use standard deviation around the mean, use absolute deviation around the median},
   author={Leys, Christophe and Ley, Christophe and Klein, Olivier and Bernard, Philippe and Licata, Laurent},
