add : draft : of objective

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -14,6 +14,34 @@
   journal={arXiv preprint arXiv:2110.09284},
   year={2021}
 }
+
+@inproceedings{ournani2020reducing,
+  title={On reducing the energy consumption of software: From hurdles to requirements},
+  author={Ournani, Zakaria and Rouvoy, Romain and Rust, Pierre and Penhoat, Joel},
+  booktitle={Proceedings of the 14th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)},
+  pages={1--12},
+  year={2020}
+}
+
+@inproceedings{pinto2014mining,
+  title={Mining questions about software energy consumption},
+  author={Pinto, Gustavo and Castor, Fernando and Liu, Yu David},
+  booktitle={Proceedings of the 11th Working Conference on Mining Software Repositories},
+  pages={22--31},
+  year={2014}
+}
+
+@article{pang2015programmers,
+  title={What do programmers know about software energy consumption?},
+  author={Pang, Candy and Hindle, Abram and Adams, Bram and Hassan, Ahmed E},
+  journal={IEEE Software},
+  volume={33},
+  number={3},
+  pages={83--89},
+  year={2015},
+  publisher={IEEE}
+}
+
 @inproceedings{bouzel2021distributed,
   title={Distributed Grid computing Manager covering Waste Heat Reuse Constraints},
   author={Bouzel, R{\'e}mi and Ngoko, Yanik and Benoit, Paul and Sainth{\'e}rant, Nicolas},
