--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -15,6 +15,63 @@
   year={2021}
 }
 
+@inproceedings{ournani2020taming,
+  title={Taming energy consumption variations in systems benchmarking},
+  author={Ournani, Zakaria and Belgaid, Mohammed Chakib and Rouvoy, Romain and Rust, Pierre and Penhoat, Joel and Seinturier, Lionel},
+  booktitle={Proceedings of the ACM/SPEC International Conference on Performance Engineering},
+  pages={36--47},
+  year={2020}
+}
+@inproceedings{ournani2021evaluating,
+  title={Evaluating the Impact of Java Virtual Machines on Energy Consumption},
+  author={Ournani, Zakaria and Belgaid, Mohammed Chakib and Rouvoy, Romain and Rust, Pierre and Penhoat, Joel},
+  booktitle={Proceedings of the 15th ACM/IEEE International Symposium on Empirical Software Engineering and Measurement (ESEM)},
+  pages={1--11},
+  year={2021}
+}
+
+
+@software{Belgaid_JRefferal_Which_JVM_2021,
+author = {Belgaid, Mohammed chakib and Ournani, Zakaria and Rouvoy, Romain and Seinturier, Lionel},
+month = {7},
+title = {{JRefferal: Which JVM suits your project ?}},
+url = {https://github.com/chakib-belgaid/jreferral},
+version = {1.0.2},
+year = {2021}
+}
+
+@software{Belgaid_Pyjoules_Python_library_2019,
+author = {Belgaid, Mohammed chakib and Rouvoy, Romain and Seinturier, Lionel},
+month = {11},
+title = {{Pyjoules: Python library that measures python code snippets}},
+url = {https://github.com/powerapi-ng/pyJoules},
+year = {2019}
+}
+
+
+@software{Belgaid_JouleHunter_an_2021,
+author = {Belgaid, Mohammed chakib and Kaminetzky, Alex and Rouvoy, Romain and Seinturier, Lionel},
+month = {9},
+title = {{JouleHunter : an energy profiler for python applications}},
+url = {https://github.com/powerapi-ng/joulehunter/},
+year = {2021}
+}
+@software{Belgaid_Jouleit_a_2020,
+author = {Belgaid, Mohammed chakib and Rouvoy, Romain and Seinturier, Lionel},
+month = {5},
+title = {{Jouleit : a tool that can be used to monitor energy consumption for any linux program}},
+url = {https://github.com/powerapi-ng/jouleit/},
+year = {2020}
+}
+
+
+@software{Belgaid_Ijoules_Python_library_2020,
+author = {Belgaid, Mohammed chakib and Rouvoy, Romain and Seinturier, Lionel},
+month = {11},
+title = {{Ijoules: Python library that measures python code in MacOS}},
+url = {https://github.com/chakib-belgaid/IJoules},
+year = {2020}
+}
 @inproceedings{ournani2020reducing,
   title={On reducing the energy consumption of software: From hurdles to requirements},
   author={Ournani, Zakaria and Rouvoy, Romain and Rust, Pierre and Penhoat, Joel},
@@ -2831,7 +2888,6 @@
 	pages        = {238--240},
 	doi          = {10.1109/ICSE-C.2017.80},
 	isbn         = {978-1-5386-1589-8},
-	note         = {\#\# main idea \par This paper presents a technique to spot the energy leaks inside a program using a spectrum technique called SPELL (Spectrum-based Energy Leak Localization) \par \#\# How it works ~ \par We have a matrix (n*m) where n is the number of the tests and m is the number of components (like classes, methods, packages, etc.) after this we calculate the oracle (a vector that says which component is responsible for what) \par \#\# Contributions \par This paper helps developers to spot the red areas in their code and optimize the energy consumption. As an example it helped to reduce the energy consumption of a java application 50\% faster and with 18\% more efficiency.},
 	abstract     = {This paper briefly proposes a technique to detect energy inefficient fragments in the source code of a software system. Test cases are executed to obtain energy consumption measurements, and a statistical method, based on spectrum-based fault localization, is introduced to relate energy consumption to the system's source code. The result of our technique is an energy ranking of source code fragments pointing developers to possible energy leaks in their code.},
 	langid       = {english},
 	file         = {/Users/chakibbelgaid/Zotero/storage/5FKHHGPV/Pereira et al. - 2017 - Helping Programmers Improve the Energy Efficiency .pdf}
@@ -2898,7 +2954,6 @@
 	pages        = {68--75},
 	doi          = {10.1145/3154384},
 	issn         = {0001-0782},
-	note         = {things to extend : \par use micro benchmarks , and say that each one is used to measure a specific thing (memory intensive , cpu intensive , io intesive ..etc )},
 	abstract     = {Development of energy-efficient software is hindered by a lack of knowledge and a lack of tools.},
 	file         = {/Users/chakibbelgaid/Zotero/storage/H5GHCEVR/Pinto and Castor - 2017 - Energy Efficiency A New Concern for Application S.pdf}
 }
@@ -3044,7 +3099,6 @@
 	pages        = {76--84},
 	doi          = {10.1109/MS.2014.104},
 	issn         = {0740-7459},
-	note         = {benchmarks link \par \href{http://www.reflection.uniovi.es/python}{http://www.reflection.uniovi.es/python}},
 	abstract     = {Python is a widely used general-purpose dynamic language. Owing to its popularity, many implementations exist for the two distinct Python 2 and Python 3 language versions. Researchers evaluated seven implementations of both language versions to facilitate the selection of one of them. For this purpose, they carefully selected 523 programs to execute in each implementation. They evaluated run-time performance and memory consumption and investigated each implementation's important qualitative characteristics.},
 	keywords     = {benchmark suite,Benchmark testing,dynamic languages,Dynamic programming,general-purpose dynamic language,high level languages,Java,JIT compilation,just-in-time compilation,memory consumption,Memory management,performance analysis,Python,Python 2 language versions,Python 3 language version,Python implementations,run-time performance,Runtime,software development,software engineering,storage management,Visual BASIC},
 	file         = {/Users/chakibbelgaid/Zotero/storage/MQS4URQF/Redondo and Ortin - 2015 - A Comprehensive Evaluation of Common Python Implem.pdf;/Users/chakibbelgaid/Zotero/storage/WPA5GT6J/6879048.html}
