--- a/thesis.tex
+++ b/thesis.tex
@@ -5,7 +5,7 @@
 % for the correlation table 
 \usepackage[table]{xcolor}
 \usepackage{pgfplotstable}
-
+\usepackage{bibentry}
 \usepackage{import}
 \usepackage{paralist}
 \usepackage[english]{babel}
