update : soa in introduction

--- a/thesis.tex
+++ b/thesis.tex
@@ -184,8 +184,8 @@
 
 \maketitle
 
-\include{chapters/dedication}
-\include{chapters/declaration}
+% \include{chapters/dedication}
+% \include{chapters/declaration}
 \include{chapters/acknowledgement}
 \include{chapters/abstract}
 
@@ -215,7 +215,7 @@
 \include{chapters/optimization/optimization}
 \include{chapters/programming_languages/programming_languages}
 \input{chapters/conclusion}
-\include{chapters/appendices/appendices} % Appendices
+% \include{chapters/appendices/appendices} % Appendices
 
 % ********************************** Back Matter *******************************
 % Backmatter should be commented out, if you are usPing appendices after References
