--- a/thesis.tex
+++ b/thesis.tex
@@ -1,14 +1,15 @@
 % ******************************* PhD Thesis Template **************************
 % Please have a look at the README.md file for info on how to use the template
 
-\documentclass[a4paper,12pt,times,numbered,print,index,doublelinesep]{PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,times,numbered,print,index,doublelinesep,notitlepage]{PhDThesisPSnPDF}
 % for the correlation table 
 \usepackage[table]{xcolor}
 \usepackage{pgfplotstable}
 \usepackage{bibentry}
 \usepackage{import}
 \usepackage{paralist}
-\usepackage[english]{babel}
+\usepackage[french,english]{babel}
+\usepackage[utf8]{inputenc}
 \usepackage{cleveref}
 \usepackage{xstring}
 \usepackage{xcolor}
@@ -46,7 +47,7 @@
 \newcommand\same[1]{\textcolor{orange}{ \em #1}}
 \newcommand\wow[1]{\textcolorcolor{orange}{\em #1}}
 \newcommand\yes[0]{\checkmark}
-\newcommand\no[0]{--}
+% \newcommand\no[0]{--}
 
 \newcommand\fnurl[2]{%
 \href{#2}{#1}\footnote{\url{#2}}%
