--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1,3 +1,14 @@
+@article{dmitry2014micro,
+  title={On micro-services architecture},
+  author={Dmitry, Namiot and Manfred, Sneps-Sneppe},
+  journal={International Journal of Open Information Technologies},
+  volume={2},
+  number={9},
+  pages={24--27},
+  year={2014},
+  publisher={Лаборатория Открытых Информационных Технологий факультета ВМК МГУ им. МВ~…}
+}
+
 
 @article{naresh2020education,
   title={Education after COVID-19 crisis based on ICT tools},
