--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -40,7 +40,8 @@
   pages={1--11},
   year={2021}
 }
-
+ @misc{shift_2021, 
+ title={Impact environnemental du numérique et gouvernance de la 5g}, url={https://theshiftproject.org/article/impact-environnemental-du-numerique-5g-nouvelle-etude-du-shift/}, journal={The Shift Project}, author={Ferreboeuf, Hugues and Efoui-Hess , Maxime and Xavier  VERNE}, year={2021}, month={Dec}} 
 
 @software{Belgaid_JRefferal_Which_JVM_2021,
 author = {Belgaid, Mohammed chakib and Ournani, Zakaria and Rouvoy, Romain and Seinturier, Lionel},
