add : some drafts for perspectives

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -2646,6 +2646,15 @@ year = {2020}
 	keywords     = {coding practices,compilation,compiler transformations,Computers,Energy consumption,energy consumption optimisation,energy efficiency,maintainability,Observers,Optimization,power aware computing,program compilers,Software,software design patterns,software engineering,Software engineering,software maintenance,Transforms},
 	file         = {/Users/chakibbelgaid/Zotero/storage/JIJNR8XA/Noureddine and Rajan - 2015 - Optimising Energy Consumption of Design Patterns.pdf;/Users/chakibbelgaid/Zotero/storage/VVFMGX6Q/7203028.html}
 }
+
+
+@article{patterson2021carbon,
+  title={Carbon emissions and large neural network training},
+  author={Patterson, David and Gonzalez, Joseph and Le, Quoc and Liang, Chen and Munguia, Lluis-Miquel and Rothchild, Daniel and So, David and Texier, Maud and Dean, Jeff},
+  journal={arXiv preprint arXiv:2104.10350},
+  year={2021}
+}
+
 @inproceedings{noureddine_preliminary_2012,
 	title        = {A Preliminary Study of the Impact of Software Engineering on {{GreenIT}}},
 	author       = {Noureddine, A. and Bourdon, A. and Rouvoy, R. and Seinturier, L.},
