--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -2648,6 +2648,17 @@ year = {2020}
 }
 
 
+@article{barroso2007case,
+  title={The case for energy-proportional computing},
+  author={Barroso, Luiz Andr{\'e} and H{\"o}lzle, Urs},
+  journal={Computer},
+  volume={40},
+  number={12},
+  pages={33--37},
+  year={2007},
+  publisher={IEEE}
+}
+
 @article{patterson2021carbon,
   title={Carbon emissions and large neural network training},
   author={Patterson, David and Gonzalez, Joseph and Le, Quoc and Liang, Chen and Munguia, Lluis-Miquel and Rothchild, Daniel and So, David and Texier, Maud and Dean, Jeff},
