add : first part of greenfaas

--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1983,6 +1983,24 @@ year = {2020}
 	number       = 2011,
 	pages        = 161
 }
+
+@inproceedings{noureddine-issta-2016,
+    author = {Noureddine, Adel and Islam, Syed and Bashroush, Rabih},
+    title = {Jolinar: Analysing the Energy Footprint of Software Applications (Demo)},
+    booktitle = {Proceedings of the 25th International Symposium on Software Testing and Analysis},
+    series = {ISSTA 2016},
+    year = {2016},
+    isbn = {978-1-4503-4390-9},
+    location = {Saarbr\&\#252;cken, Germany},
+    pages = {445--448},
+    numpages = {4},
+    url = {http://doi.acm.org/10.1145/2931037.2948706},
+    doi = {10.1145/2931037.2948706},
+    acmid = {2948706},
+    publisher = {ACM},
+    address = {New York, NY, USA},
+    keywords = {Energy Footprint, Program Analysis},
+}
 @article{kothari2009joulemeter,
 	title        = {Joulemeter: Virtual machine power measurement and management},
 	author       = {Kothari, Nupur and Bhattacharya, Arka},
