add : citing the interns work

--- a/final_library.bib
+++ b/final_library.bib
@@ -1689,6 +1689,16 @@ the structure of the paper :
   pages = {63--74}
 }
 
+@article{kaminetzky_energy_2021,
+  title = {Energy Consumption Experiments},
+  author = {Kaminetzky, Alejandro},
+  year = {2021},
+  month = nov,
+  pages = {11},
+  langid = {english},
+  file = {/Users/chakibbelgaid/Zotero/storage/XPWG8PWT/Kaminetzky - Energy consumption experiments.pdf}
+}
+
 @article{kaur_analysis_2016,
   title = {Analysis of {{Code Refactoring Impact}} on {{Software Quality}}},
   author = {Kaur, Amandeep and Kaur, Manpreet},
@@ -3151,6 +3161,14 @@ use micro benchmarks , and say that each one is used to measure a specific thing
   abstract = {Docker provide some facilities, which are useful for developers and administrators. It is an open platform can be used for building, distributing, and running applications in a portable, lightweight runtime and packaging tool, known as Docker Engine. It also provide Docker Hub, which is a cloud service for sharing applications. Costs can be reduced by replacing traditional virtual machine with docker container. It excellently reduces the cost of re-building the cloud development platform.},
   langid = {english},
   file = {/Users/chakibbelgaid/Zotero/storage/4KHL7WBD/Rad et al. - 2017 - An Introduction to Docker and Analysis of its Perf.pdf}
+}
+
+@article{randrianaina_optimisation_nodate,
+  title = {{OPTIMISATION DE L'EMPREINTE \'ENERG\'ETIQUE DE PYTHON}},
+  author = {Randrianaina, Georges Aaron},
+  pages = {33},
+  langid = {french},
+  file = {/Users/chakibbelgaid/Zotero/storage/7LLW4J68/Randrianaina - OPTIMISATION DE L’EMPREINTE ÉNERGÉTIQUE DE PYTHON.pdf}
 }
 
 @incollection{ranka_energy_2009,
