--- a/static_final_library.bib
+++ b/static_final_library.bib
@@ -1538,6 +1538,24 @@ year = {2020}
   author={Cappello, Franck and Desprez, F and Margery, D},
   year={2010}
 }
+@article{randrianaina_optimisation_2019,
+	title = {{OPTIMISATION} {DE} {L}’{EMPREINTE} É{NERGÉTIQUE} {DE} {PYTHON}},
+	language = {fr},
+	author = {Randrianaina, Georges Aaron},
+	pages = {33},
+	year={2019}
+}
+
+
+
+@article{kaminetzky_energy_2021,
+	title = {Energy consumption experiments},
+	language = {en},
+	author = {Kaminetzky, Alejandro},
+	month = nov,
+	year = {2021},
+	pages = {11},
+}
 
 @inproceedings{rubinsteyn2012parakeet,
   title={Parakeet: A $\{$Just-In-Time$\}$ Parallel Accelerator for Python},
