update : university logo

--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -9,7 +9,7 @@
 % \subtitle{}
 \crest{
     \includegraphics[width=.3\linewidth]{Figs/logo-inria}\,
-    \includegraphics[width=.3\linewidth]{Figs/logo-univ-lille}\,
+    \includegraphics[width=.3\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
     \includegraphics[width=.3\linewidth]{Figs/logo-cristal}
 }
 
