--- a/thesis-info-fr.tex
+++ b/thesis-info-fr.tex
@@ -1,26 +1,26 @@
 % ************************ Thesis Information & Meta-data **********************
 %% The title of the thesis
-\title{Green Coding: an Empirical Approach to Harness the Energy Consumption of Software Services}
+\title{Éco-développement : une approche empirique pour réduire la consommation énergétique des logiciels}
 %\texorpdfstring is used for PDF metadata. Usage:
 %\texorpdfstring{LaTeX_Version}{PDF Version (non-latex)} eg.,
 %\texorpdfstring{$sigma$}{sigma}
 
 %% Subtitle (Optional)
 % \subtitle{}
-\crest{
-    \includegraphics[width=.3\linewidth]{Figs/logo-inria}\,
-    \includegraphics[width=.3\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
-    \includegraphics[width=.3\linewidth]{Figs/logo-cristal}
-}
+% \crest{
+%     \includegraphics[width=.3\linewidth]{Figs/logo-inria}\,
+%     \includegraphics[width=.3\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
+%     \includegraphics[width=.3\linewidth]{Figs/logo-cristal}
+% }
 
 %% The full name of the author
-\author{Mohammed Chakib \textsc{BELGAID}}
+% \author{Mohammed Chakib \textsc{BELGAID}}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
 % \dept{Department of Engineering}
 
 %% University and Crest
-\university{University of Lille}
+\university{Université de Lille}
 % Crest minimum should be 30mm.
 
 %% Use this crest, if you are using the college crest
@@ -34,32 +34,35 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-\supervisor{Pr. Romain \textsc{ROUVOY} \newline
-    Pr. Lionel \textsc{SEINTURIER}}
-\supervisorrole{\textbf{Supervisors: }}
+% \supervisor{Pr. Romain \textsc{ROUVOY}}
+\supervisorrole{\textbf{Directeur: }}
 \supervisorlinewidth{0.45\textwidth}
 %% Supervisor Role (optional) - Supervisor (default) or advisor
 
+% \advisor{Pr. Romain \textsc{ROUVOY} \newline
+%     Pr. Lionel \textsc{SEINTURIER}}
+\advisorrole{\textbf{Codirecteur: }}
+\advisorlinewidth{0.45\textwidth}
 %% if no title is desired:
 % \supervisorrole{}
 
 %% Supervisor line width: required to align supervisors
 
 \guest{David OLIVIER}
-\guestrole{\textbf{Guest: }}
+\guestrole{\textbf{Invité: }}
 \guestlinewidth{0.36\textwidth}
 
 
 
 \Reporter{Pr. Olivier \textsc{BARAIS} \newline
     Pr. Chantal \textsc{TACONET}}
-\Reporterrole{\textbf{Reporters: }}
+\Reporterrole{\textbf{Rapporteurs: }}
 \Reporterlinewidth{0.49\textwidth}
 
 \Jury{Pr. Pierre \textsc{BOULET} \newline
     Mr. Thomas \textsc{DEGUEULE}
 }
-\Juryrole{\textbf{Examiners: }}
+\Juryrole{\textbf{Examinateur: }}
 \Jurylinewidth{0.55\textwidth}
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
@@ -91,5 +94,4 @@
 %\degreedate{September 2014} 
 
 %% Meta information
-\subject{LaTeX} \keywords{{Inria} {Software optimization} {programming language} {energy consumption} {PhD Thesis} {Green Computing} {University of
-            Lille}}
+\subject{LaTeX} \keywords{{Inria} {Software optimization} {programming language} {energy consumption} {PhD Thesis} {Green Computing} {University of Lille}}
