update: main page

--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -14,7 +14,7 @@
 }
 
 %% The full name of the author
-\author{\emph{Mohammed Chakib} \textsc{Belgaid}}
+\author{Mohammed Chakib \textsc{BELGAID}}
 
 %% Department (eg. Department of Engineering, Maths, Physics)
 % \dept{Department of Engineering}
@@ -34,17 +34,33 @@
 
 %% Supervisor (optional)
 %% for multiple supervisors, append each supervisor with the \newline command
-\supervisor{Pr. \emph{Romain} \textsc{Rouvoy}, \newline
-    Pr. \emph{Lionel} \textsc{Seinturier}}
-
-%% Supervisor Role (optional) - Supervisor (default) or advisor
+\supervisor{Pr. Romain \textsc{ROUVOY} \newline
+    Pr. Lionel \textsc{SEINTURIER}}
 \supervisorrole{\textbf{Supervisors: }}
+\supervisorlinewidth{0.45\textwidth}
+%% Supervisor Role (optional) - Supervisor (default) or advisor
+
 %% if no title is desired:
 % \supervisorrole{}
 
 %% Supervisor line width: required to align supervisors
-\supervisorlinewidth{0.45\textwidth}
 
+\guest{David OLIVIER}
+\guestrole{\textbf{Guest: }}
+\guestlinewidth{0.36\textwidth}
+
+
+
+\Reporter{Pr. Olivier \textsc{BARAIS} \newline
+    Pr. Chantal \textsc{TACONET}}
+\Reporterrole{\textbf{Reporters: }}
+\Reporterlinewidth{0.49\textwidth}
+
+\Jury{Pr. Pierre \textsc{BOULET} \newline
+    Mr. Thomas \textsc{DEGUEULE}
+}
+\Juryrole{\textbf{Examiners: }}
+\Jurylinewidth{0.55\textwidth}
 %% Advisor (optional)
 %% for multiple advisors, append each advisor with the \newline command
 % \advisor{Romain Rouvoy \newline
