add davidosn logo

--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -8,9 +8,12 @@
 %% Subtitle (Optional)
 % \subtitle{}
 \crest{
-    \includegraphics[width=.3\linewidth]{Figs/logo-inria}\,
-    \includegraphics[width=.3\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
-    \includegraphics[width=.3\linewidth]{Figs/logo-cristal}
+    \includegraphics[width=.3\linewidth, keepaspectratio]{Figs/logodavidosn}\,
+    \includegraphics[width=.25\linewidth]{Figs/logo-inria}\,
+    \includegraphics[width=.25\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
+    \includegraphics[width=.25\linewidth]{Figs/logo-cristal}\,
+
+
 }
 
 %% The full name of the author
