--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -8,11 +8,12 @@
 %% Subtitle (Optional)
 % \subtitle{}
 \crest{
-    \centering
-    \includegraphics[width=.2\textwidth, keepaspectratio]{Figs/logodavidosn}\,
-    \includegraphics[width=.2\textwidth]{Figs/logo-inria}\,
-    \includegraphics[width=.2\textwidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
-    \includegraphics[width=.2\textwidth]{Figs/logo-cristal}\,
+    \includegraphics[width=.3\linewidth, keepaspectratio]{Figs/logo-davidson.jpeg}\,
+    \includegraphics[width=.25\linewidth]{Figs/logo-inria}\,
+    \includegraphics[width=.25\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
+    \includegraphics[width=.25\linewidth]{Figs/logo-cristal}\,
+
+
 }
 
 %% The full name of the author
@@ -38,8 +39,8 @@
 %% for multiple supervisors, append each supervisor with the \newline command
 \supervisorlinewidth{.9\textwidth}
 \supervisor{\normalsize
-            Pr. \emph{Romain} \textsc{ROUVOY}, Université de Lille,\newline
-            Pr. \emph{Lionel} \textsc{SEINTURIER}, Université de Lille}
+    Pr. \emph{Romain} \textsc{ROUVOY}, Université de Lille,\newline
+    Pr. \emph{Lionel} \textsc{SEINTURIER}, Université de Lille}
 \supervisorrole{\textbf{Supervisors: }}
 %% Supervisor Role (optional) - Supervisor (default) or advisor
 %% if no title is desired:
@@ -50,18 +51,18 @@
 \Reporterrole{\textbf{Reporters: }}
 \Reporterlinewidth{.9\textwidth}
 \Reporter{\normalsize
-        Pr. \emph{Olivier} \textsc{BARAIS}, Université de Rennes~1,\newline
-        Pr. \emph{Chantal} \textsc{TACONET}, Télécom SudParis}
+    Pr. \emph{Olivier} \textsc{BARAIS}, Université de Rennes~1,\newline
+    Pr. \emph{Chantal} \textsc{TACONET}, Télécom SudParis}
 
 \Juryrole{\textbf{Examiners: }}
 \Jurylinewidth{.9\textwidth}
 \Jury{\normalsize
-        Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille,\newline
-        Dr. \emph{Thomas} \textsc{DEGUEULE}, Université de Bordeaux
+    Pr. \emph{Pierre} \textsc{BOULET}, Université de Lille,\newline
+    Dr. \emph{Thomas} \textsc{DEGUEULE}, Université de Bordeaux
 }
 
 \guest{\normalsize
-        M. \emph{David} OLIVIER, Davidson consulting}
+    M. \emph{David} OLIVIER, Davidson consulting}
 \guestrole{\textbf{Guest: }}
 \guestlinewidth{.9\textwidth}
 
@@ -92,7 +93,7 @@
 
 %% Submission date
 % Default is set as {\monthname[\the\month]\space\the\year}
-\degreedate{December 14th, 2022} 
+\degreedate{December 14th, 2022}
 
 %% Meta information
 \subject{LaTeX} \keywords{{Inria} {Software optimization} {programming language} {energy consumption} {PhD Thesis} {Green Computing} {University of
