--- a/thesis-info.tex
+++ b/thesis-info.tex
@@ -8,7 +8,7 @@
 %% Subtitle (Optional)
 % \subtitle{}
 \crest{
-    \includegraphics[width=.3\linewidth, keepaspectratio]{Figs/logodavidosn}\,
+    \includegraphics[width=.3\linewidth, keepaspectratio]{Figs/logo-davidson.jpeg}\,
     \includegraphics[width=.25\linewidth]{Figs/logo-inria}\,
     \includegraphics[width=.25\linewidth,trim={0 3em 0 0 }]{Figs/logo-univ-lille}\,
     \includegraphics[width=.25\linewidth]{Figs/logo-cristal}\,
